chore: self review changes
